--- a/public/about.html
+++ b/public/about.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>About</title>
   </head>
   <body>
     <ul>
-      <a href="/static">Home</a>
+      <a href="/static/">Home</a>
       <a href="/static/about.html">About</a>
     </ul>
-    <h1>Home page</h1>
+    <h1>About page</h1>
   </body>
 </html>
